--- a/loto.html
+++ b/loto.html
@@ -434,7 +434,7 @@
                                         <div class="col-5 pl-1 pr-1">
                                             <input type="text" class="form-control form-control-tc fc-gray" value="8" readonly>
                                         </div>
-                                        <div class="col-2 pl-0 pr-0 ticket-fields">
+                                        <div class="col-2 pl-0 pr-0 ticket-fields ticket-fields--hover-plus">
                                             <span data-toggle="modal" data-target="#Loto2">
                                                 <input class="ticket-fields__field" type="text" value="" readonly="">
                                             </span>
@@ -450,7 +450,7 @@
                                                 value="64"
                                                 readonly>
                                         </div>
-                                        <div class="col-2 pl-0 pr-0 ticket-fields">
+                                        <div class="col-2 pl-0 pr-0 ticket-fields ticket-fields--hover-plus">
                                             <span data-toggle="modal" data-target="#Loto2">
                                                 <input class="ticket-fields__field" type="text" value="" readonly="">
                                             </span>
@@ -464,7 +464,7 @@
                                             <input type="text" class="form-control form-control-tc fc-gray" value="120"
                                                 readonly>
                                         </div>
-                                        <div class="col-2 pl-0 pr-0 ticket-fields">
+                                        <div class="col-2 pl-0 pr-0 ticket-fields ticket-fields--hover-plus">
                                             <span data-toggle="modal" data-target="#Loto2">
                                                 <input class="ticket-fields__field" type="text" value="" readonly="">
                                             </span>
@@ -478,7 +478,7 @@
                                             <input type="text" class="form-control form-control-tc fc-gray" value="426"
                                                 readonly>
                                         </div>
-                                        <div class="col-2 pl-0 pr-0 ticket-fields">
+                                        <div class="col-2 pl-0 pr-0 ticket-fields ticket-fields--hover-plus">
                                             <span data-toggle="modal" data-target="#Loto2">
                                                 <input class="ticket-fields__field" type="text" value="" readonly="">
                                             </span>
@@ -492,7 +492,7 @@
                                             <input type="text" class="form-control form-control-tc fc-gray" value="520"
                                                 readonly>
                                         </div>
-                                        <div class="col-2 pl-0 pr-0 ticket-fields">
+                                        <div class="col-2 pl-0 pr-0 ticket-fields ticket-fields--hover-plus">
                                             <span data-toggle="modal" data-target="#Loto2">
                                                 <input class="ticket-fields__field" type="text" value="" readonly="">
                                             </span>
@@ -519,7 +519,7 @@
                                             <input type="text" class="form-control form-control-tc fc-gray" value="165"
                                                 readonly>
                                         </div>
-                                        <div class="col-2 pl-0 pr-0 ticket-fields">
+                                        <div class="col-2 pl-0 pr-0 ticket-fields ticket-fields--hover-plus">
                                             <span data-toggle="modal" data-target="#Loto2">
                                                 <input class="ticket-fields__field" type="text" value="" readonly="">
                                             </span>
@@ -534,7 +534,7 @@
                                             <input type="text" class="form-control form-control-tc fc-gray"
                                                 value="5874" readonly>
                                         </div>
-                                        <div class="col-2 pl-0 pr-0 ticket-fields">
+                                        <div class="col-2 pl-0 pr-0 ticket-fields ticket-fields--hover-plus">
                                             <span data-toggle="modal" data-target="#Loto2">
                                                 <input class="ticket-fields__field" type="text" value="" readonly="">
                                             </span>
@@ -548,7 +548,7 @@
                                             <input type="text" class="form-control form-control-tc fc-gray" value="58446"
                                                 readonly>
                                         </div>
-                                        <div class="col-2 pl-0 pr-0 ticket-fields">
+                                        <div class="col-2 pl-0 pr-0 ticket-fields ticket-fields--hover-plus">
                                             <span data-toggle="modal" data-target="#Loto2">
                                                 <input class="ticket-fields__field" type="text" value="" readonly="">
                                             </span>
@@ -562,7 +562,7 @@
                                             <input type="text" class="form-control form-control-tc fc-gray" value="78426"
                                                 readonly>
                                         </div>
-                                        <div class="col-2 pl-0 pr-0 ticket-fields">
+                                        <div class="col-2 pl-0 pr-0 ticket-fields ticket-fields--hover-plus">
                                             <span data-toggle="modal" data-target="#Loto2">
                                                 <input class="ticket-fields__field" type="text" value="" readonly="">
                                             </span>
@@ -576,7 +576,7 @@
                                             <input type="text" class="form-control form-control-tc fc-gray" value="221879"
                                                 readonly>
                                         </div>
-                                        <div class="col-2 pl-0 pr-0 ticket-fields">
+                                        <div class="col-2 pl-0 pr-0 ticket-fields ticket-fields--hover-plus">
                                             <span data-toggle="modal" data-target="#Loto2">
                                                 <input class="ticket-fields__field" type="text" value="" readonly="">
                                             </span>
