--- a/rezultati.html
+++ b/rezultati.html
@@ -461,12 +461,12 @@
                 </div>
             </div>
 
-            <div class="row bg-color-dgray mt-5 pt-4 pb-4 justify-content-center rounded-lg mr-from-md-0 ml-from-md-0">
-                <div class="col-11">
+            <div class="row bg-color-dgray mt-5 pt-4 justify-content-center rounded-lg mr-from-md-0 ml-from-md-0 score-block">
+                <div class="col-xl-11">
                     <div class="row color-white pt-1 pb-1">
-                        <div class="col-sm-3">
+                        <div class="col-md-12 col-lg-3 mb-4">
                             <div class="row align-items-end">
-                                <div class="col-9 d-flex">
+                                <div class="col-6 col-lg-9 d-flex">
                                     <?xml version="1.0" encoding="utf-8"?>
                                     <!-- Generator: Adobe Illustrator 25.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
@@ -489,9 +489,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-3">
+                        <div class="col-md-12 col-lg-3 mb-4">
                             <div class="row align-items-end">
-                                <div class="col-9 d-flex">
+                                <div class="col-6 col-lg-9 d-flex">
                                     <?xml version="1.0" encoding="utf-8"?>
                                     <!-- Generator: Adobe Illustrator 25.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
@@ -517,9 +517,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-md-12 col-lg-6 mb-4">
                             <div class="row align-items-end justify-content-end">
-                                <div class="col-4 d-flex">
+                                <div class="col-6 col-lg-4 col-xl-4 d-flex">
                                     <?xml version="1.0" encoding="utf-8"?>
                                     <!-- Generator: Adobe Illustrator 25.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
@@ -536,7 +536,7 @@
                                     </svg>
                                     <p class="h6 pl-3 mb-0"><strong>Osvojili<br>ste</strong></p>
                                 </div>
-                                <div class="col-7 pl-0">
+                                <div class="col-6 col-lg-8 col-xl-7 pl-0">
                                     <p class="h2 mb-0 color-yellow"><strong>5.000.000 RSD</strong></p>
                                 </div>
                             </div>
