--- a/rezultati.html
+++ b/rezultati.html
@@ -972,7 +972,7 @@
                     <div class="row color-white pt-1 pb-1">
                         <div class="col-md-12 col-lg-3 mb-4">
                             <div class="row align-items-end">
-                                <div class="col-6 col-lg-9 d-flex">
+                                <div class="col-sm-6 col-lg-9 d-flex score-block__cols">
                                     <?xml version="1.0" encoding="utf-8"?>
                                     <!-- Generator: Adobe Illustrator 25.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
@@ -988,16 +988,16 @@
 	 M19.8,24.2c-4.9,0-8.6-7-8.6-15.7V2.6h17.3v5.9C28.5,17.2,24.7,24.2,19.8,24.2z M37.1,9.8c0,2.7-3.1,6.4-7.7,7.6
 	c0.8-2.4,1.2-5.3,1.2-8.8V7h6.5V9.8z" />
                                     </svg>
-                                    <p class="h6 pl-3 mb-0"><strong>Glavna<br>premija</strong></p>
+                                    <p class="h6 pl-3 mb-0"><strong>Glavna <br>premija</strong></p>
                                 </div>
-                                <div class="col-3 pl-0">
+                                <div class="col-sm-3 pl-0">
                                     <p class="h2 mb-0 color-yellow"><strong>1</strong></p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-12 col-lg-3 mb-4">
                             <div class="row align-items-end">
-                                <div class="col-6 col-lg-9 d-flex">
+                                <div class="col-sm-6 col-lg-9 d-flex score-block__cols">
                                     <?xml version="1.0" encoding="utf-8"?>
                                     <!-- Generator: Adobe Illustrator 25.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
@@ -1016,16 +1016,16 @@
 	c0.7,1.1,1.1,2.3,1.1,3.6L37.6,31.4L37.6,31.4z M12.5,18.7c-0.9-0.6-2-1-3.2-1H6.3c-3.2,0-5.9,2.8-5.9,6.2c0,0.7,0.6,1.2,1.2,1.2
 	s1.2-0.6,1.2-1.2c0-2.1,1.5-3.7,3.4-3.7h3.1c0.4,0,0.8,0.1,1.2,0.3C11.2,19.8,11.8,19.2,12.5,18.7L12.5,18.7z" />
                                     </svg>
-                                    <p class="h6 pl-3 mb-0"><strong>Svi<br>dobitnici</strong></p>
+                                    <p class="h6 pl-3 mb-0"><strong>Svi <br>dobitnici</strong></p>
                                 </div>
-                                <div class="col-3 pl-0">
+                                <div class="col-sm-3 pl-0">
                                     <p class="h2 mb-0 color-yellow"><strong>650</strong></p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-12 col-lg-6 mb-4">
                             <div class="row align-items-end justify-content-end">
-                                <div class="col-6 col-lg-4 col-xl-4 d-flex">
+                                <div class="col-sm-6 col-lg-4 col-xl-4 d-flex score-block__cols">
                                     <?xml version="1.0" encoding="utf-8"?>
                                     <!-- Generator: Adobe Illustrator 25.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
@@ -1040,9 +1040,9 @@
 	c0,1-3.5,3.3-9.8,3.6v-3.6c0-0.4-0.1-0.8-0.3-1.3c4.2-0.1,7.9-1.1,10.2-2.6V14.1z M26.3,10.4c-0.6,0-1.1,0-1.6-0.1
 	c-2.8-1.7-6.5-2.2-8.9-2.3c-0.5-0.4-0.8-0.8-0.8-1.3c0-2,5.1-3.7,11.3-3.7s11.3,1.7,11.3,3.7S32.6,10.4,26.3,10.4z" />
                                     </svg>
-                                    <p class="h6 pl-3 mb-0"><strong>Osvojili<br>ste</strong></p>
+                                    <p class="h6 pl-3 mb-0"><strong>Osvojili <br>ste</strong></p>
                                 </div>
-                                <div class="col-6 col-lg-8 col-xl-7 pl-0">
+                                <div class="col-sm-6 col-lg-8 col-xl-7 pl-0">
                                     <p class="h2 mb-0 color-yellow"><strong>5.000.000 RSD</strong></p>
                                 </div>
                             </div>
@@ -1098,118 +1098,51 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <img class="star" src="images/zvezdica-tackice.svg" alt="">
-                        <h1>Kako da igram Loto<span class="color-red">?</span></h1>
-                        <img class="d-block m-auto" src="images/Pomoc-igracima.png" alt="" width="300">
+                        <img class="star" src="images/rezultati/Zvezdica.svg" alt="">
+                        <h1>Kako da Lorem ipsum<span class="color-purple">?</span></h1>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="how-to-play__grid how-to-play__grid--loto">
+        <div class="how-to-play__grid">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="grid-item">
-                            <div class="grid-item__header grid-item__header--red text-center text-uppercase text-white">
-                                <img class="grid-item-img01" src="images/loto/Loto-ikonica.svg" alt="">
+                    <div class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="grid-item grid-item--lightblue rounded-lg">
+                            <div class="grid-item__header grid-item__header--color-box">
+                                <img class="grid-item-img01" src="images/rezultati/Dobitak-ikonica.svg" alt="">
                             </div>
                             <div class="grid-item__body">
-                                <h3>Šta je sistem?</h3>
-                                <p>Registruj se i igraj svoje
-                                omiljene igre onlajn uz našu
-                                registracionu karticu.Lorem
-                                ipsum dolor sit amet,
-                                consectetuer adipiscing elit,
-                                sed diam nonummy nibh
-                                euismod.</p>
+                                <h3 class="color-purple">Kako da
+                                    preuzmeš
+                                    dobitak?</h3>
+                                <a href="#" class="link-arrow mt-auto">Saznaj više</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="grid-item">
-                            <div class="grid-item__header grid-item__header--yellow text-center text-uppercase text-white">
-                                <img class="grid-item-img01" src="images/loto/Bubanj-ikonica.svg" alt="">
+                    <div class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="grid-item grid-item--lightred rounded-lg">
+                            <div class="grid-item__header grid-item__header--color-box">
+                                <img class="grid-item-img01" src="images/rezultati/Kalendar-ikonica.svg" alt="">
                             </div>
                             <div class="grid-item__body">
-                                <h3>Šta je pretplata?</h3>
-                                <p>Registruj se i igraj svoje
-                                omiljene igre onlajn uz našu
-                                registracionu karticu.Lorem
-                                ipsum dolor sit amet,
-                                consectetuer adipiscing elit,
-                                sed diam nonummy nibh
-                                euismod dolor sit.</p>
+                                <h3 class="color-red">Koji je rok da
+                                    preuzmeš
+                                    dobitak?</h3>
+                                <a href="#" class="link-arrow mt-auto">Saznaj više</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="grid-item">
-                            <div class="grid-item__header grid-item__header--darkblue text-center text-uppercase text-white">
-                                <img class="grid-item-img01" src="images/loto/xoxo-ikonica.svg" alt="">
+                    <div class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="grid-item grid-item--pink rounded-lg">
+                            <div class="grid-item__header grid-item__header--color-box">
+                                <img class="grid-item-img01" src="images/rezultati/Porez-ikonica.svg" alt="">
                             </div>
                             <div class="grid-item__body">
-                                <h3>Šta je QP?</h3>
-                                <p>Registruj se i igraj svoje
-                                omiljene igre onlajn uz našu
-                                registracionu karticu.Lorem
-                                ipsum dolor sit amet,
-                                consectetuer adipiscing elit,
-                                sed diam nonummy.</p>
+                                <h3 class="color-darkblue">Porez na <br>dobitak</h3>
+                                <a href="#" class="link-arrow mt-auto">Saznaj više</a>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="grid-item">
-                            <div class="grid-item__header grid-item__header--lightgreen text-center text-uppercase text-white">
-                                <img class="grid-item-img01" src="images/loto/Joker-ikonica.svg" alt="">
-                            </div>
-                            <div class="grid-item__body">
-                                <h3>Kako da igram Joker?</h3>
-                                <p>Registruj se i igraj svoje
-                                omiljene igre onlajn uz našu
-                                registracionu karticu.Lorem
-                                ipsum dolor sit amet,
-                                consectetuer adipiscing elit,
-                                sed diam nonummy.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="grid-item">
-                            <div class="grid-item__header grid-item__header--darkblue text-center text-uppercase text-white">
-                                <img class="grid-item-img03" src="images/loto/Loto-plus-ikonica.svg" alt="">
-                            </div>
-                            <div class="grid-item__body">
-                                <h3>Šta je Loto+?</h3>
-                                <p>Registruj se i igraj svoje
-                                omiljene igre onlajn uz našu
-                                registracionu karticu.Lorem
-                                ipsum dolor sit amet,
-                                consectetuer adipiscing elit,
-                                sed diam nonummy.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="grid-item">
-                            <div class="grid-item__header grid-item__header--red text-center text-uppercase text-white">
-                                <img class="grid-item-img03" src="images/loto/Loptice-ikonica.svg" alt="">
-                            </div>
-                            <div class="grid-item__body">
-                                <h3>Kako da se obogatim?</h3>
-                                <p>Registruj se i igraj svoje
-                                omiljene igre onlajn uz našu
-                                registracionu karticu.Lorem
-                                ipsum dolor sit amet,
-                                consectetuer adipiscing elit,
-                                sed diam nonummy.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 d-flex justify-content-center">
-                        <button class="btn btn-dark regulations" id="" data-target="">Bingo pravila</button>
                     </div>
                 </div>
             </div>
