--- a/e-srecke.html
+++ b/e-srecke.html
@@ -82,12 +82,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <div class="es-logo">
-                            <img src="images/e-srecke/e-srecke_logo.svg" alt="E-srećke logo">
-                        </div>
-                        <div class="es-text text-center">
-                            <h1 class="text-white">Osvoji do 1.000.000 din!</h1>
-                            <span>Instant zabava i brzi keš</span>
+                        <div class="es-text">
+                            <span>E-Srećke. Instant zabava i brzi keš.</span>
+                            <h1 class="text-white">Osvoji do MILION dinara!</h1>
                         </div>
                     </div>
                 </div>
@@ -112,10 +109,10 @@
                 Maks. dobitak:<br>200,000 do 1mil. RSD
             </div>
             <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+                <a class="link-arrow" href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
             </div>
             <div class="srecke-item__play">
-                <button class="btn-dark">Igraj</button>
+                <button class="btn btn-dark">Igraj</button>
                 <a href="#" class="demo">Demo</a>
             </div>
         </div>
@@ -134,10 +131,10 @@
                 Maks. dobitak:<br>200,000 do 1mil. RSD
             </div>
             <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+                <a class="link-arrow" href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
             </div>
             <div class="srecke-item__play">
-                <button class="btn-dark">Igraj</button>
+                <button class="btn btn-dark">Igraj</button>
                 <a href="#" class="demo">Demo</a>
             </div>
         </div>
@@ -156,10 +153,10 @@
                 Maks. dobitak:<br>200,000 do 1mil. RSD
             </div>
             <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+                <a class="link-arrow" href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
             </div>
             <div class="srecke-item__play">
-                <button class="btn-dark">Igraj</button>
+                <button class="btn btn-dark">Igraj</button>
                 <a href="#" class="demo">Demo</a>
             </div>
         </div>
@@ -178,10 +175,10 @@
                 Maks. dobitak:<br>200,000 do 1mil. RSD
             </div>
             <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+                <a class="link-arrow" href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
             </div>
             <div class="srecke-item__play">
-                <button class="btn-dark">Igraj</button>
+                <button class="btn btn-dark">Igraj</button>
                 <a href="#" class="demo">Demo</a>
             </div>
         </div>
@@ -200,10 +197,10 @@
                 Maks. dobitak:<br>200,000 do 1mil. RSD
             </div>
             <div class="srecke-item__rules">
-                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+                <a class="link-arrow" href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
             </div>
             <div class="srecke-item__play">
-                <button class="btn-dark">Igraj</button>
+                <button class="btn btn-dark">Igraj</button>
                 <a href="#" class="demo">Demo</a>
             </div>
         </div>
