--- a/rezultati.html
+++ b/rezultati.html
@@ -1104,7 +1104,7 @@
                 </div>
             </div>
         </div>
-        <div class="how-to-play__grid">
+        <div class="how-to-play__grid mb-5">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-4">
@@ -1271,6 +1271,32 @@
         </div>
     </footer>
     <!-- FOOTER -->
+
+
+    <!-- AFTER FOOTER -->
+    <footer class="after-footer">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-sm-4 mt-3">
+                    <span>2020. dls@alrightsreserved</span>
+                </div>
+                <div class="col-sm-3 mt-3 ml-auto">
+                    <div class="row align-items-center">
+                        <div class="col-4">
+                            <img src="images/Cert1.png" width="70">
+                        </div>
+                        <div class="col-4">
+                            <img src="images/Cert2.png" width="70">
+                        </div>
+                        <div class="col-4">
+                            <img src="images/Cert3.png" width="70">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- AFTER FOOTER -->
 
     <!-- Modal loto -->
     <div class="modal fade" id="Loto" tabindex="-1" aria-labelledby="LotoLabel" aria-hidden="true">
