--- a/e-srecke.html
+++ b/e-srecke.html
@@ -109,7 +109,7 @@
                 Maks. dobitak:<br>200,000 do 1mil. RSD
             </div>
             <div class="srecke-item__rules">
-                <a class="link-arrow" href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+                <a class="link-arrow" href="#">Pravila igre</a>
             </div>
             <div class="srecke-item__play">
                 <button class="btn btn-dark">Igraj</button>
@@ -131,7 +131,7 @@
                 Maks. dobitak:<br>200,000 do 1mil. RSD
             </div>
             <div class="srecke-item__rules">
-                <a class="link-arrow" href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+                <a class="link-arrow" href="#">Pravila igre</a>
             </div>
             <div class="srecke-item__play">
                 <button class="btn btn-dark">Igraj</button>
@@ -153,7 +153,7 @@
                 Maks. dobitak:<br>200,000 do 1mil. RSD
             </div>
             <div class="srecke-item__rules">
-                <a class="link-arrow" href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+                <a class="link-arrow" href="#">Pravila igre</a>
             </div>
             <div class="srecke-item__play">
                 <button class="btn btn-dark">Igraj</button>
@@ -175,7 +175,7 @@
                 Maks. dobitak:<br>200,000 do 1mil. RSD
             </div>
             <div class="srecke-item__rules">
-                <a class="link-arrow" href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+                <a class="link-arrow" href="#">Pravila igre</a>
             </div>
             <div class="srecke-item__play">
                 <button class="btn btn-dark">Igraj</button>
@@ -197,7 +197,7 @@
                 Maks. dobitak:<br>200,000 do 1mil. RSD
             </div>
             <div class="srecke-item__rules">
-                <a class="link-arrow" href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+                <a class="link-arrow" href="#">Pravila igre</a>
             </div>
             <div class="srecke-item__play">
                 <button class="btn btn-dark">Igraj</button>
