izmenio link-arrow klasu

--- a/rezultati.html
+++ b/rezultati.html
@@ -1116,7 +1116,7 @@
                                 <h3 class="color-purple">Kako da
                                     preuzmeš
                                     dobitak?</h3>
-                                <a href="#" class="link-arrow mt-auto">Saznaj više</a>
+                                <a href="#" class="link-arrow link-arrow--purple mt-auto">Saznaj više</a>
                             </div>
                         </div>
                     </div>
@@ -1129,7 +1129,7 @@
                                 <h3 class="color-red">Koji je rok da
                                     preuzmeš
                                     dobitak?</h3>
-                                <a href="#" class="link-arrow mt-auto">Saznaj više</a>
+                                <a href="#" class="link-arrow link-arrow--red mt-auto">Saznaj više</a>
                             </div>
                         </div>
                     </div>
@@ -1140,7 +1140,7 @@
                             </div>
                             <div class="grid-item__body">
                                 <h3 class="color-darkblue">Porez na <br>dobitak</h3>
-                                <a href="#" class="link-arrow mt-auto">Saznaj više</a>
+                                <a href="#" class="link-arrow link-arrow--darkblue mt-auto">Saznaj više</a>
                             </div>
                         </div>
                     </div>
