e-srecke nova gotova

--- a/e-srecke.html
+++ b/e-srecke.html
@@ -93,8 +93,109 @@
     </section>
     <!-- ESGG HERO -->
 
+    <section class="five-games">
+        <div class="container">
+            <div class="five-games__wrapper">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="five-games__logo">
+                            <img src="images/e-srecke/e-Srecke-logo-01.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="five-games__wrapper__item mb-lg-0 mb-4">
+                            <div class="five-games__wrapper__item__img">
+                                <img src="images/e-srecke/bubamara-game.png" alt="">
+                            </div>
+                            <div class="five-games__wrapper__item__txt text-center">
+                                <h5 class="text-uppercase font-weight-bold">Buba Mara</h5>
+                                <p>Cena: 20-100 RSD<br> Maks. dobitak: <br><strong>do 1.000.000 RSD</strong></p>
+                                <div class="five-games__wrapper__item__txt__link">
+                                    <a href="#" class="link-black">Demo</a>
+                                    <span>|</span>
+                                    <a href="#" class="link-black">Pravila</a>
+                                </div>
+                                <button class="btn btn-dark text-uppercase font-weight-bold">Igraj</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="five-games__wrapper__item mb-lg-0 mb-4">
+                            <div class="five-games__wrapper__item__img">
+                                <img src="images/e-srecke/slatkikes-game.png" alt="">
+                            </div>
+                            <div class="five-games__wrapper__item__txt text-center">
+                                <h5 class="text-uppercase font-weight-bold">Slatki keš</h5>
+                                <p>Cena: 20-100 RSD<br> Maks. dobitak: <br><strong>do 1.000.000 RSD</strong></p>
+                                <div class="five-games__wrapper__item__txt__link">
+                                    <a href="#" class="link-black">Demo</a>
+                                    <span>|</span>
+                                    <a href="#" class="link-black">Pravila</a>
+                                </div>
+                                <button class="btn btn-dark text-uppercase font-weight-bold">Igraj</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="five-games__wrapper__item mb-lg-0 mb-4">
+                            <div class="five-games__wrapper__item__img">
+                                <img src="images/e-srecke/kockice-game.png" alt="">
+                            </div>
+                            <div class="five-games__wrapper__item__txt text-center">
+                                <h5 class="text-uppercase font-weight-bold">Kockice</h5>
+                                <p>Cena: 20-100 RSD<br> Maks. dobitak: <br><strong>do 1.000.000 RSD</strong></p>
+                                <div class="five-games__wrapper__item__txt__link">
+                                    <a href="#" class="link-black">Demo</a>
+                                    <span>|</span>
+                                    <a href="#" class="link-black">Pravila</a>
+                                </div>
+                                <button class="btn btn-dark text-uppercase font-weight-bold">Igraj</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="five-games__wrapper__item mb-lg-0 mb-4">
+                            <div class="five-games__wrapper__item__img">
+                                <img src="images/e-srecke/zuca-game.png" alt="">
+                            </div>
+                            <div class="five-games__wrapper__item__txt text-center">
+                                <h5 class="text-uppercase font-weight-bold">Žuća</h5>
+                                <p>Cena: 20-100 RSD<br> Maks. dobitak: <br><strong>do 1.000.000 RSD</strong></p>
+                                <div class="five-games__wrapper__item__txt__link">
+                                    <a href="#" class="link-black">Demo</a>
+                                    <span>|</span>
+                                    <a href="#" class="link-black">Pravila</a>
+                                </div>
+                                <button class="btn btn-dark text-uppercase font-weight-bold">Igraj</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="five-games__wrapper__item">
+                            <div class="five-games__wrapper__item__img">
+                                <img src="images/e-srecke/xox-game.png" alt="">
+                            </div>
+                            <div class="five-games__wrapper__item__txt text-center">
+                                <h5 class="text-uppercase font-weight-bold">XOX</h5>
+                                <p>Cena: 20-100 RSD<br> Maks. dobitak: <br><strong>do 1.000.000 RSD</strong></p>
+                                <div class="five-games__wrapper__item__txt__link">
+                                    <a href="#" class="link-black">Demo</a>
+                                    <span>|</span>
+                                    <a href="#" class="link-black">Pravila</a>
+                                </div>
+                                <button class="btn btn-dark text-uppercase font-weight-bold">Igraj</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- SRECKE -->
-    <section class="srecke container">
+    <!-- <section class="srecke container">
         <div class="srecke-item srecke-item--bubamara">
             <div class="srecke-item__img">
                 <img src="images/e-srecke/bubamara-game.png" alt="">
@@ -204,15 +305,15 @@
                 <a href="#" class="demo">Demo</a>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- SRECKE -->
 
     <!-- SRECKE NEXT/PREV -->
-    <div class="srecke-btns justify-content-center align-items-center d-flex mt-4">
+    <!-- <div class="srecke-btns justify-content-center align-items-center d-flex mt-4">
         <p class="h5 mb-0 mr-3"><strong>Više srećki </strong></p>
         <button type="button" id="prevv" class="slick-prev slick-arrow" style="">Previous</button>
         <button type="button" id="nextt" class="slick-next slick-arrow" style="">Next</button>
-    </div>
+    </div> -->
     <!-- SRECKE NEXT/PREV -->
 
     <!-- LOTO BANNER -->
@@ -226,10 +327,10 @@
                     <div class="loto-banner__text text-white text-center">
                         <p>Ove nedelje osvoji</p>
                         <h2>1.500.000<sup>€</sup></h2>
-                        <button class="btn-dark">Igraj online</button>
+                        <button class="btn btn-dark">Igraj online</button>
                     </div>
                     <div class="loto-banner__image">
-                        <img src="images/loto-srecko.png" alt="">
+                        <img src="images/e-srecke/@2x-Loto-Srecko.png" alt="">
                     </div>
                 </div>
             </div>
