--- a/registracija.html
+++ b/registracija.html
@@ -81,13 +81,13 @@
                 <div class="col-12">
                     <div class="main-banner__text text-center text-white pt-5">
                         <h1 class="h2"><strong>Klikom do milionskih premija uz DLS online!</strong> <span
-                                class="eighteen eighteen--h float-right">18+</span></h1>
+                                class="eighteen eighteen--h float-right eighteen-abs">18+</span></h1>
                         <p>Registruj se i uživaj u online igrama u svakom trenutku.</p>
                     </div>
 
-                    <div class="row justify-content-center mt-5">
+                    <div class="row justify-content-center">
                         <div class="col-lg-12">
-                            <div id="msform">
+                            <div id="msform" class="pt-4">
                                 <ul id="progressbar">
                                     <li class="active"><strong>1. Korisnički podaci</strong></li>
                                     <li><strong>2. Lični podaci</strong></li>
@@ -555,6 +555,11 @@
 
         //activate next step on progressbar using the index of next_fs
         $("#progressbar li").eq($("fieldset").index(next_fs)).addClass("active");
+
+        //scroll to upwards
+        $([document.documentElement, document.body]).animate({
+            scrollTop: $("#msform").offset().top
+        }, 1000);
 
         //show the next fieldset
         next_fs.show();
